--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #FFC568;
+  background-color: #d140f5;
   font-size: 62.5%;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
